2008-08-01  Murray Cumming  <murrayc@murrayc.com>

	* docs/Makefile.am:
	* docs/index.html: Removed index.html. The true copy is in 
	gnomemm-website (uploaded to gtkmm.org).

2008-07-26  Benjamin Herr  <ben@0x539.de>

	* gtk/src/calendar.hg: Removed spurious ; characters.
	Bug #544848.

2008-07-27  Murray Cumming  <murrayc@murrayc.com>

	* docs/reference/Doxyfile.in: Use pangomm doxygen tags.
	* docs/reference/Makefile.am: Use installdox to link to 
	pangomm documentation.

2008-07-26  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/comboboxentry.ccg:
	* gtk/src/comboboxentry.hg: Added get_active_text(), wrapping the 
	special (stupid) use of combo_box_get_active_text() for 
	GtkComboBoxEntry.
	Class documentation: Added the new advice from the C documentation, 
	about using get_active() to check if the changed signal is 
	is really signalling a selection change.

2008-07-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/statusicon.hg: Remove the comment about the signals, 
	because Matthias Clasen said they are really public API, 
	in bug #361561.

2008-07-25  Murray Cumming  <murrayc@murrayc.com>

	* tools/m4/convert_gtk.m4:
	* gtk/src/widget.hg: Wrapped the DragResult enum and 
	added the drag_failed signal.

	* gtk/src/clipboard.hg:
	* gtk/src/handlebox.ccg:
	* gtk/src/handlebox.hg:
	* gtk/src/image.hg:
	* gtk/src/pagesetup.hg:
	* gtk/src/printsettings.hg:
	* gtk/src/toolshell.hg: Added documentation for some hand-written 
	methods.

2008-07-23  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/calendar.hg: Correct some newin2p16 to 
	newin2p14.

2.13.5:

2008-07-23  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: Regenerated.
	* gtk/src/builder.ccg:
	* gtk/src/builder.hg: Added versions of create_from_file(), 
	create_from_string(), add_from_file(), and add_from_string() 
	that take an ID or array of IDs, to allow building of only a part of 
	the file, as was already possible with libglade.
	* gtk/src/cellrenderercombo.ccg: