@@ -11,7 +11,7 @@
 </tr>
 </table>
 <center>
-  <a class="qindex" href="../../index.html">Main Page</a> &nbsp;
+  <a class="qindex" href="http://www.gtkmm.org/documentation.shtml">Main Page</a> &nbsp;
   <a href="group__Widgets.html">Widgets</a> &nbsp;
   <a class="qindex" href="namespaces.html"> Namespaces</a> &nbsp;
   <a href="../../tutorial/html/index.html"> Book</a> &nbsp;
