@@ -1,3 +1,11 @@
+2008-08-02  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/Makefile.am: Do not install non-existant index.html.
+	* docs/reference/Makefile.am: Correct the installdox link to 
+	pangomm.
+	* docs/reference/gtkmm_header.html_fragment: Change the Main 
+	Page link to gtkmm.org/documentation.shtml.
+
 2008-08-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* docs/Makefile.am:
